Add bitsors project

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@ twitter: <a href="https://twitter.com/arturomf94"><tt>@arturomf94</tt></a><br>
 </tbody></table>
 
 <hr>
-<h2>Test</h2>
+<h2>Projects</h2>
 
 <ul>
-  <li><a href="https://twitter.com/arturomf94">test</a>
-      blablabla </li>
+  <li><a href="https://github.com/arturomf94/bitsors/">bitsors</a>
+      A Rust wrapper for the Bitso API </li>
 
 </ul>
 </html>
