--- a/index.html
+++ b/index.html
@@ -38,4 +38,8 @@ twitter: <a href="https://twitter.com/arturomf94"><tt>@arturomf94</tt></a><br>
       A Rust wrapper for the Bitso API </li>
 
 </ul>
+<hr>
+<em>
+    IPFS hash: <a href="https://gateway.ipfs.io/ipfs/QmXGiSC7E8NYaiwiX333e6jLPckSbuDWgvnF8vvdpHwqYR/">QmXGiSC7E8NYaiwiX333e6jLPckSbuDWgvnF8vvdpHwqYR</a>
+</em>
 </html>
