Add link for IPFS hashes

--- a/index.html
+++ b/index.html
@@ -39,4 +39,7 @@ twitter: <a href="https://twitter.com/arturomf94"><tt>@arturomf94</tt></a><br>
 
 </ul>
 <hr>
+<em>
+    <a href="arturomf94.io/ipfs/">IPFS Hashes</a>
+</em>
 </html>
