--- a/ipfs.html
+++ b/ipfs.html
@@ -6,5 +6,8 @@
 <hr>
 <h2>IPFS Hashes</h2>
 <a href="https://gateway.ipfs.io/ipfs/QmXGiSC7E8NYaiwiX333e6jLPckSbuDWgvnF8vvdpHwqYR/">QmXGiSC7E8NYaiwiX333e6jLPckSbuDWgvnF8vvdpHwqYR</a>
+<br>
 <a href="https://gateway.ipfs.io/ipfs/QmZ53CfFK74CTM9zVHG5BYqmuhaTPBvCHdRFjVKDVcdrdE/">QmZ53CfFK74CTM9zVHG5BYqmuhaTPBvCHdRFjVKDVcdrdE</a>
+<br>
+<a href="https://gateway.ipfs.io/ipfs/QmPYXTiZ3LPSgNAFUDn3hkaXr5QWY77DCh8gZ6nwLBD8dh/">QmPYXTiZ3LPSgNAFUDn3hkaXr5QWY77DCh8gZ6nwLBD8dh</a>
 </html>
