Update hashes on html

--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@ twitter: <a href="https://twitter.com/arturomf94"><tt>@arturomf94</tt></a><br>
 </ul>
 <hr>
 <em>
-    <a href="/hashes.txt">IPFS Hashes</a>
+    <a href="/ipfs">IPFS Hashes</a>
 </em>
 </html>
