--- a/ipfs.html
+++ b/ipfs.html
@@ -5,4 +5,12 @@
 
 <hr>
 <h2>IPFS Hashes</h2>
-adsfas
+<hr>
+Wed 27 May 2020 06:52:06 PM CDT
+added QmQTXxzMyTWAnGBQYsqLFkpgBu98fBBEk89Ue1XDf8RpT5 arturomf94.github.io/CNAME
+added Qma4akjBydAsGbWt2kLc9kX83Y8tiAcJ2rzEqLA2TmtLKe arturomf94.github.io/deploy.sh
+added QmQWtjLba7Y96QnuRVmxwypWWQGioMAvhiVDAMGGAe6idJ arturomf94.github.io/index.html
+added QmZwTwTxxoMRrsHwqZAkJdixXsEM7MQM42CJq3BnR6zWKp arturomf94.github.io/ipfs.html
+added QmVFR683B6nYLBNw5GzBawhZHz4DLn3A5tFMWjMEYTvRWU arturomf94.github.io/ipfs.log
+added QmTAjtSRQR6J2QFGKenKPZQzvwxfnS4SEgfnhLKcbmsC7j arturomf94.github.io/yo.jpg
+added QmVvrgDMXpghT93pGJEgF7EXnNUF3zfafV9XPqGEUHfi4R arturomf94.github.io
