Update ipfs hashes

--- a/ipfs.html
+++ b/ipfs.html
@@ -13,4 +13,13 @@ added QmQWtjLba7Y96QnuRVmxwypWWQGioMAvhiVDAMGGAe6idJ arturomf94.github.io/index.
 added QmcUynzCApwVdkRNKQ1F97i12Xp6x4tV6Ft9DwDta4x4HN arturomf94.github.io/ipfs.html
 added QmUTZnTyyM3Ed614Run9tfkmpnzL5xezfdBrty1PPzCgQx arturomf94.github.io/ipfs.log
 added QmTAjtSRQR6J2QFGKenKPZQzvwxfnS4SEgfnhLKcbmsC7j arturomf94.github.io/yo.jpg
-added Qma6eXwd3BHDKsZ2YyFApwi7TxxPRqQNA6xXNzfoHarp2J arturomf94.github.io
+<hr>
+Wed 27 May 2020 06:55:10 PM CDT
+added QmQTXxzMyTWAnGBQYsqLFkpgBu98fBBEk89Ue1XDf8RpT5 arturomf94.github.io/CNAME
+added QmQ6ubWZ4R3q6A83PcJWK8MDemG5CALaHLPArBnE7UW5v5 arturomf94.github.io/deploy.sh
+added QmQWtjLba7Y96QnuRVmxwypWWQGioMAvhiVDAMGGAe6idJ arturomf94.github.io/index.html
+added QmXNLdf5sYXvz8B6DR3PDq8DbLbi53inagDAXm9EBaXF4d arturomf94.github.io/ipfs.html
+added QmUTZnTyyM3Ed614Run9tfkmpnzL5xezfdBrty1PPzCgQx arturomf94.github.io/ipfs.log
+added QmTAjtSRQR6J2QFGKenKPZQzvwxfnS4SEgfnhLKcbmsC7j arturomf94.github.io/yo.jpg
+added QmXT7TdrodgthQjWsWRFPVcPRua8mrVUDuorUa58a2TKPu arturomf94.github.io
+</html>
