Update ipfs hashes

--- a/ipfs.html
+++ b/ipfs.html
@@ -14,4 +14,13 @@ added QmX7av4jxD6UFJuKNVECyaCx3BJcJi5Dr4m7K84R5iv4xd arturomf94.github.io/ipfs.h
 added QmUTZnTyyM3Ed614Run9tfkmpnzL5xezfdBrty1PPzCgQx arturomf94.github.io/ipfs.log
 added QmTAjtSRQR6J2QFGKenKPZQzvwxfnS4SEgfnhLKcbmsC7j arturomf94.github.io/yo.jpg
 added QmfCho8dgTK517MF9sGZL7Avjie6sY2Y8D6bCZBDbHaYAx arturomf94.github.io
+<hr>
+Wed 27 May 2020 07:02:56 PM CDT
+added QmQTXxzMyTWAnGBQYsqLFkpgBu98fBBEk89Ue1XDf8RpT5 arturomf94.github.io/CNAME
+added QmQ6ubWZ4R3q6A83PcJWK8MDemG5CALaHLPArBnE7UW5v5 arturomf94.github.io/deploy.sh
+added QmQWtjLba7Y96QnuRVmxwypWWQGioMAvhiVDAMGGAe6idJ arturomf94.github.io/index.html
+added QmeDFpYPqnTYizAafrSHG7Epj6yUxHzzaQhb6mjrkyu1QV arturomf94.github.io/ipfs.html
+added QmUTZnTyyM3Ed614Run9tfkmpnzL5xezfdBrty1PPzCgQx arturomf94.github.io/ipfs.log
+added QmTAjtSRQR6J2QFGKenKPZQzvwxfnS4SEgfnhLKcbmsC7j arturomf94.github.io/yo.jpg
+added QmeuQuR45ZPjGCNKESH1wPg1o96E1YBooyVJstN5v8k41R arturomf94.github.io
 </html>
