--- a/ipfs.html
+++ b/ipfs.html
@@ -5,4 +5,11 @@
 
 <hr>
 <h2>IPFS Hashes</h2>
+<hr>
+Wed 27 May 2020 07:21:44 PM CDT
+<br>added QmQWtjLba7Y96QnuRVmxwypWWQGioMAvhiVDAMGGAe6idJ arturomf94.github.io/index.html
+<br>added QmQfC46Rx52vwGgQyYimMXJqL4KyT3gUWQwTz4A68gBRKo arturomf94.github.io/ipfs.html
+<br>added QmbFMke1KXqnYyBBWxB74N4c5SBnJMVAiMNRcGu6x1AwQH arturomf94.github.io/tmp_hashes.txt
+<br>added QmTAjtSRQR6J2QFGKenKPZQzvwxfnS4SEgfnhLKcbmsC7j arturomf94.github.io/yo.jpg
+<br>added QmeRUgYJbzRJZxhfWCFJiUaTHQM5c1J9iC3S4TjgmaySds arturomf94.github.io
 </html>
