Update ipfs hashes

--- a/ipfs.html
+++ b/ipfs.html
@@ -12,4 +12,11 @@ Wed 27 May 2020 07:21:44 PM CDT
 <br>added QmbFMke1KXqnYyBBWxB74N4c5SBnJMVAiMNRcGu6x1AwQH arturomf94.github.io/tmp_hashes.txt
 <br>added QmTAjtSRQR6J2QFGKenKPZQzvwxfnS4SEgfnhLKcbmsC7j arturomf94.github.io/yo.jpg
 <br>added QmeRUgYJbzRJZxhfWCFJiUaTHQM5c1J9iC3S4TjgmaySds arturomf94.github.io
+<hr>
+Wed 27 May 2020 07:46:42 PM CDT
+<br>added QmQWtjLba7Y96QnuRVmxwypWWQGioMAvhiVDAMGGAe6idJ arturomf94.github.io/index.html
+<br>added QmU8RVQtW86rZpcojN4DUibMARByE2AWvzUkcXZmzS7fty arturomf94.github.io/ipfs.html
+<br>added QmbFMke1KXqnYyBBWxB74N4c5SBnJMVAiMNRcGu6x1AwQH arturomf94.github.io/tmp_hashes.txt
+<br>added QmTAjtSRQR6J2QFGKenKPZQzvwxfnS4SEgfnhLKcbmsC7j arturomf94.github.io/yo.jpg
+<br>added QmQxtcftvy8rmek6uLjA59RwCzqL2aGJKpSsUvB8fAUyQe arturomf94.github.io
 </html>
