--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@ twitter: <a href="https://twitter.com/arturomf94"><tt>@arturomf94</tt></a><br>
 <h2>Projects</h2>
 
 <ul>
-  <li><a href="https://github.com/arturomf94/bitsors/">bitsors</a>
-      A Rust wrapper for the Bitso API </li>
+  <li> Bitsors: A Rust wrapper for the Bitso API <a href="https://github.com/arturomf94/bitsors/">[code]</a></li>
+  <li> Cryptors: An introduction to cryptography with Rust <a href="https://github.com/arturomf94/cryptors/">[code]</a> <a href="/cryptors">[book]</li>
 
 </ul>
 <hr>
