Update ipfs hashes

--- a/ipfs.html
+++ b/ipfs.html
@@ -19,4 +19,11 @@ Wed 27 May 2020 07:46:42 PM CDT
 <br>added QmbFMke1KXqnYyBBWxB74N4c5SBnJMVAiMNRcGu6x1AwQH arturomf94.github.io/tmp_hashes.txt
 <br>added QmTAjtSRQR6J2QFGKenKPZQzvwxfnS4SEgfnhLKcbmsC7j arturomf94.github.io/yo.jpg
 <br>added QmQxtcftvy8rmek6uLjA59RwCzqL2aGJKpSsUvB8fAUyQe arturomf94.github.io
+<hr>
+Mon 13 Jul 2020 03:03:24 PM CDT
+<br>added QmVQ6MXcx8g3ZnCMsRApsZXhCaqKazE9L37bDEu75JoNog arturomf94.github.io/index.html
+<br>added QmccwEF2WPB68Ckw4gZCWdZhrWdetif7Pih2DxaKaKGkfZ arturomf94.github.io/ipfs.html
+<br>added QmbFMke1KXqnYyBBWxB74N4c5SBnJMVAiMNRcGu6x1AwQH arturomf94.github.io/tmp_hashes.txt
+<br>added QmTAjtSRQR6J2QFGKenKPZQzvwxfnS4SEgfnhLKcbmsC7j arturomf94.github.io/yo.jpg
+<br>added QmSk7cziW8Nmks2CduDFwn7Shm939SMf3UXcx2bH6vpC42 arturomf94.github.io
 </html>
