Change some style stuff

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html><head>
 <title>Arturo Marquez Flores</title>
 </head>
-<body vlink="#FFCC33" text="#FFFFFF" link="#00FFFF" bgcolor="#000000" alink="#FF6666">
+<body vlink="#FFCC33" text="#000000" link="#00FFFF" bgcolor="#FFFFFF" alink="#6588c9">
 
 <h1>Arturo Marquez Flores</h1>
 
@@ -19,8 +19,6 @@
 <p>
 <tt>
 <br>
-email:  arturomf94  at protonmail dot com<br>
-bitcoin: <a href="https://blockchair.com/bitcoin/address/19ADLNtbPYobXezVUAzGDjwD7FksMYxwJZ"><tt>19ADLNtbPYobXezVUAzGDjwD7FksMYxwJZ</tt></a><br>
 github: <a href="https://github.com/arturomf94/"><tt>arturomf94</tt></a><br>
 PGP:  D486 4878 CDFB 5FA5 F377 7BD2 4770 F492 9D4B 560A (fingerprint)<br>
 twitter: <a href="https://twitter.com/arturomf94"><tt>@arturomf94</tt></a><br>
