Update ipfs hashes

--- a/ipfs.html
+++ b/ipfs.html
@@ -26,4 +26,11 @@ Mon 13 Jul 2020 03:03:24 PM CDT
 <br>added QmbFMke1KXqnYyBBWxB74N4c5SBnJMVAiMNRcGu6x1AwQH arturomf94.github.io/tmp_hashes.txt
 <br>added QmTAjtSRQR6J2QFGKenKPZQzvwxfnS4SEgfnhLKcbmsC7j arturomf94.github.io/yo.jpg
 <br>added QmSk7cziW8Nmks2CduDFwn7Shm939SMf3UXcx2bH6vpC42 arturomf94.github.io
+<hr>
+Thu 29 Oct 2020 12:34:07 AM CST
+<br>added QmQK2ftPpUiDXHWy9GyRwPJpA5grAiDuifpVcXnvHRvohE arturomf94.github.io/index.html
+<br>added QmPezyPHmoVaUuTX6yqqjsfAzBY4xvdVWH815Bx9xLCCPn arturomf94.github.io/ipfs.html
+<br>added QmbFMke1KXqnYyBBWxB74N4c5SBnJMVAiMNRcGu6x1AwQH arturomf94.github.io/tmp_hashes.txt
+<br>added QmQCDhoiMea2RJx8mrjeMJb26H24xgYxwKiaScLDkmVL7u arturomf94.github.io/yo.jpg
+<br>added QmUg5KPyynrxs8pN9a92ytGYJdkC9hq9S5aSQeKUQXhqNK arturomf94.github.io
 </html>
