Update ipfs hashes

--- a/ipfs.html
+++ b/ipfs.html
@@ -33,4 +33,11 @@ Thu 29 Oct 2020 12:34:07 AM CST
 <br>added QmbFMke1KXqnYyBBWxB74N4c5SBnJMVAiMNRcGu6x1AwQH arturomf94.github.io/tmp_hashes.txt
 <br>added QmQCDhoiMea2RJx8mrjeMJb26H24xgYxwKiaScLDkmVL7u arturomf94.github.io/yo.jpg
 <br>added QmUg5KPyynrxs8pN9a92ytGYJdkC9hq9S5aSQeKUQXhqNK arturomf94.github.io
+<hr>
+Thu 29 Oct 2020 12:39:24 AM CST
+<br>added QmQK2ftPpUiDXHWy9GyRwPJpA5grAiDuifpVcXnvHRvohE arturomf94.github.io/index.html
+<br>added QmVdVP9VK7oCZyihHXQaNraKaHziPyLCymE3wQTkSx2wHm arturomf94.github.io/ipfs.html
+<br>added QmbFMke1KXqnYyBBWxB74N4c5SBnJMVAiMNRcGu6x1AwQH arturomf94.github.io/tmp_hashes.txt
+<br>added QmQCDhoiMea2RJx8mrjeMJb26H24xgYxwKiaScLDkmVL7u arturomf94.github.io/yo.jpg
+<br>added QmZxR7guVbt8ag8zEviGftzSHYUn3ySUUTTzqMceguVvQz arturomf94.github.io
 </html>
