Set link colour right

--- a/ipfs.html
+++ b/ipfs.html
@@ -1,7 +1,7 @@
 <html><head>
 <title>IPFS Hashes</title>
 </head>
-<body vlink="#FFCC33" text="#000000" link="#00FFFF" bgcolor="#FFFFFF" alink="#6588c9">
+<body vlink="#6588c9" text="#000000" link="#00FFFF" bgcolor="#FFFFFF" alink="#6588c9">
 
 <hr>
 <h2>IPFS Hashes</h2>
