Update ipfs hashes

--- a/ipfs.html
+++ b/ipfs.html
@@ -40,4 +40,11 @@ Thu 29 Oct 2020 12:39:24 AM CST
 <br>added QmbFMke1KXqnYyBBWxB74N4c5SBnJMVAiMNRcGu6x1AwQH arturomf94.github.io/tmp_hashes.txt
 <br>added QmQCDhoiMea2RJx8mrjeMJb26H24xgYxwKiaScLDkmVL7u arturomf94.github.io/yo.jpg
 <br>added QmZxR7guVbt8ag8zEviGftzSHYUn3ySUUTTzqMceguVvQz arturomf94.github.io
+<hr>
+Thu 29 Oct 2020 12:44:35 AM CST
+<br>added QmbWomg7sHnzS71aZqJFTTvZXFwASWC8ZEsBB2Bf3hzo9f arturomf94.github.io/index.html
+<br>added QmcYfpyh5zzk4Ag5Vk32S1nwPK9HbWEydBEG24qTUcEpSN arturomf94.github.io/ipfs.html
+<br>added QmbFMke1KXqnYyBBWxB74N4c5SBnJMVAiMNRcGu6x1AwQH arturomf94.github.io/tmp_hashes.txt
+<br>added QmQCDhoiMea2RJx8mrjeMJb26H24xgYxwKiaScLDkmVL7u arturomf94.github.io/yo.jpg
+<br>added QmYjRH5K4BGC3pZibgvEkgEiKgg8qvBVbNkkHRizzAfbWU arturomf94.github.io
 </html>
