Fix link colour ffs

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html><head>
 <title>Arturo Marquez Flores</title>
 </head>
-<body vlink="#6588c9" text="#000000" link="#00FFFF" bgcolor="#FFFFFF" alink="#6588c9">
+<body vlink="#6588c9" text="#000000" link="#FFCC33" bgcolor="#FFFFFF" alink="#6588c9">
 
 <h1>Arturo Marquez Flores</h1>
 
