Update ipfs hashes

--- a/ipfs.html
+++ b/ipfs.html
@@ -47,4 +47,11 @@ Thu 29 Oct 2020 12:44:35 AM CST
 <br>added QmbFMke1KXqnYyBBWxB74N4c5SBnJMVAiMNRcGu6x1AwQH arturomf94.github.io/tmp_hashes.txt
 <br>added QmQCDhoiMea2RJx8mrjeMJb26H24xgYxwKiaScLDkmVL7u arturomf94.github.io/yo.jpg
 <br>added QmYjRH5K4BGC3pZibgvEkgEiKgg8qvBVbNkkHRizzAfbWU arturomf94.github.io
+<hr>
+Thu 29 Oct 2020 12:52:39 AM CST
+<br>added QmcsBU79HmByYZrtxijX2UHeGeT9wzqzr8b9itQJYKWDdc arturomf94.github.io/index.html
+<br>added QmaTKJXSLjRcsetJkhPW766qZ3PBybQCS599YSVnVsCff3 arturomf94.github.io/ipfs.html
+<br>added QmbFMke1KXqnYyBBWxB74N4c5SBnJMVAiMNRcGu6x1AwQH arturomf94.github.io/tmp_hashes.txt
+<br>added QmQCDhoiMea2RJx8mrjeMJb26H24xgYxwKiaScLDkmVL7u arturomf94.github.io/yo.jpg
+<br>added QmYAHLR4kvEqEH4sGki1WE4V14h1jE62rXziDsuwSD3zWh arturomf94.github.io
 </html>
