--- a/ipfs.html
+++ b/ipfs.html
@@ -54,4 +54,11 @@ Thu 29 Oct 2020 12:52:39 AM CST
 <br>added QmbFMke1KXqnYyBBWxB74N4c5SBnJMVAiMNRcGu6x1AwQH arturomf94.github.io/tmp_hashes.txt
 <br>added QmQCDhoiMea2RJx8mrjeMJb26H24xgYxwKiaScLDkmVL7u arturomf94.github.io/yo.jpg
 <br>added QmYAHLR4kvEqEH4sGki1WE4V14h1jE62rXziDsuwSD3zWh arturomf94.github.io
+<hr>
+Sat 07 Nov 2020 09:29:19 PM CST
+<br>added QmcsBU79HmByYZrtxijX2UHeGeT9wzqzr8b9itQJYKWDdc arturomf94.github.io/index.html
+<br>added QmUAdkVXUyhrVfbtSoynRZhCq88jUDWxUodfRySc77Y1xa arturomf94.github.io/ipfs.html
+<br>added QmbFMke1KXqnYyBBWxB74N4c5SBnJMVAiMNRcGu6x1AwQH arturomf94.github.io/tmp_hashes.txt
+<br>added QmQCDhoiMea2RJx8mrjeMJb26H24xgYxwKiaScLDkmVL7u arturomf94.github.io/yo.jpg
+<br>added QmXnJTTAmB8fV26uhiVbQgSuccJhgQwA6WtWjkwv48KXCe arturomf94.github.io
 </html>
