Update ipfs hashes

--- a/ipfs.html
+++ b/ipfs.html
@@ -61,4 +61,11 @@ Sat 07 Nov 2020 09:29:19 PM CST
 <br>added QmbFMke1KXqnYyBBWxB74N4c5SBnJMVAiMNRcGu6x1AwQH arturomf94.github.io/tmp_hashes.txt
 <br>added QmQCDhoiMea2RJx8mrjeMJb26H24xgYxwKiaScLDkmVL7u arturomf94.github.io/yo.jpg
 <br>added QmXnJTTAmB8fV26uhiVbQgSuccJhgQwA6WtWjkwv48KXCe arturomf94.github.io
+<hr>
+Fri 04 Dec 2020 07:19:59 PM CST
+<br>added QmcsBU79HmByYZrtxijX2UHeGeT9wzqzr8b9itQJYKWDdc arturomf94.github.io/index.html
+<br>added QmPeXQcKWnCwTuNzwdJNwwDkAvmy6XaDDL7GrCLcSTsKD2 arturomf94.github.io/ipfs.html
+<br>added QmbFMke1KXqnYyBBWxB74N4c5SBnJMVAiMNRcGu6x1AwQH arturomf94.github.io/tmp_hashes.txt
+<br>added QmQCDhoiMea2RJx8mrjeMJb26H24xgYxwKiaScLDkmVL7u arturomf94.github.io/yo.jpg
+<br>added QmWoSvhyg7vLHvJUJpKX2SQYb4DMjXqrkPjzTA3BHfjyFa arturomf94.github.io
 </html>
