--- a/index.html
+++ b/index.html
@@ -1,43 +1,52 @@
-<html><head>
-<title>Arturo Marquez Flores</title>
+<html>
+
+<head>
+  <title>Arturo Marquez Flores</title>
 </head>
+
 <body vlink="#6588c9" text="#000000" link="#FFCC33" bgcolor="#FFFFFF" alink="#6588c9">
 
-<h1>Arturo Marquez Flores</h1>
+  <h1>Arturo Marquez Flores</h1>
 
-<table>
-<tbody><tr><td>
-<p><img src="yo.jpg" alt="mugshot"></p><br><table><tbody><tr>
+  <table>
+    <tbody>
+      <tr>
+        <td>
+          <p><img src="yo.jpg" alt="mugshot"></p><br>
+          <table>
+            <tbody>
+              <tr>
 
-</tr>
-<tr>
+              </tr>
+              <tr>
 
 
-</tr>
-</tbody></table>
-</td><td>
-<p>
-<tt>
-<br>
-github: <a href="https://github.com/arturomf94/"><tt>arturomf94</tt></a><br>
-PGP:  D486 4878 CDFB 5FA5 F377 7BD2 4770 F492 9D4B 560A (fingerprint)<br>
-twitter: <a href="https://twitter.com/arturomf94"><tt>@arturomf94</tt></a><br>
-</tt>
-</p>
-</td>
-</tr>
-</tbody></table>
+              </tr>
+            </tbody>
+          </table>
+        </td>
+        <td>
+          <p>
+            <tt>
+              <br>
+              github: <a href="https://github.com/arturomf94/"><tt>arturomf94</tt></a><br>
+              twitter: <a href="https://twitter.com/arturomf94"><tt>@arturomf94</tt></a><br>
+            </tt>
+          </p>
+        </td>
+      </tr>
+    </tbody>
+  </table>
 
-<hr>
-<h2>Projects</h2>
+  <hr>
+  <h2>Projects</h2>
 
-<ul>
-  <li> Bitsors: A Rust wrapper for the Bitso API <a href="https://github.com/arturomf94/bitsors/">[code]</a></li>
-  <li> Cryptors: An introduction to cryptography with Rust <a href="https://github.com/arturomf94/cryptors/">[code]</a> <a href="/cryptors">[book]</li>
+  <ul>
+    <li> Bitsors: A Rust wrapper for the Bitso API <a href="https://github.com/arturomf94/bitsors/">[code]</a></li>
+    <li> Cryptors: An introduction to cryptography with Rust <a
+        href="https://github.com/arturomf94/cryptors/">[code]</a> <a href="/cryptors">[book]</li>
 
-</ul>
-<hr>
-<em>
-    <a href="/ipfs">IPFS Hashes</a>
-</em>
+  </ul>
+  <hr>
+
 </html>
