--- a/tags.html
+++ b/tags.html
@@ -11,8 +11,10 @@ The following part extracts all the tags from your posts and sort tags, so that 
 {% endcomment %}
 {% assign rawtags = "" %}
 {% for post in site.posts %}
+	{% unless post.date > site.time %}
 	{% assign ttags = post.tags | join:'|' | append:'|' %}
 	{% assign rawtags = rawtags | append:ttags %}
+	{% endunless %}
 {% endfor %}
 {% assign rawtags = rawtags | split:'|' | sort %}
 
@@ -50,7 +52,7 @@ The purpose of this snippet is to list all your posts posted with a certain tag.
 	<h2 id="{{ tag | slugify }}">{{ tag }}</h2>
 	<ul>
 	 {% for post in site.posts %}
-		 {% if post.tags contains tag %}
+		 {% if post.tags contains tag and post.date <= site.time %}
 		 <li>
 		 <h3>
 		 <a href="{{ post.url }}">
